# llama-orch

./: .biomeignore  .clippy.toml  .cursorignore  .dockerignore  .editorconfig  .eslintignore  .gitignore  .gitmodules  .llorch.toml.example  .prettierignore  AGENTS.md  AI_CODER_RULES_FOR_NEXT_TEAM.md  ALL_PHASES_COMPLETE.md  APOLOGY.md  ARCHITECTURE_SIMPLIFIED.md  ARCHIVE_MD_SUMMARY.md  ASK_SKY_BLUE.sh  AUDIT_COMPLIANCE_FIXES_COMPLETE.md  BDD_CLEANUP_SUMMARY.md  BDD_COVERAGE_ANALYSIS.md  BDD_STATUS_SUMMARY.md  BUILD_CONFIGURATION.md  BUILD_FIX_SUMMARY.md  Biomefile  CARGO_TOML_INVENTORY.md  CHANGELOG.md  CHECKLIST.md  CHECKLIST_HAIKU.md  CHECKLIST_RUST_MVP.md  CLEANUP_AND_PORT_SUMMARY.md  CLOUD_PROFILE_MIGRATION_PLAN.md  CODEOWNERS  CODING_STANDARDS.md  COMMIT_6592850_SUMMARY.md  COMPLETE-TESTING-PROGRESS.md  COMPLIANCE.md  CONSUMER_CAPABILITIES.md  CONTRIBUTING.md  Cargo.toml  DAEMON_COMPLETE.md  (+195 more)
cli/consumer-tests/: Cargo.toml  README.md
cli/llama-orch-cli/: Cargo.toml  README.md  SPEC.md  feature-requirements.md
consumers/llama-orch-sdk/: CLIENT_HANDBOOK.md  Cargo.toml  README.md  REFACTOR_PLAN.md  TEAM_RESPONSIBILITIES.md
consumers/llama-orch-utils/: .gitignore  Cargo.toml  LICENCE  README.md  index.d.ts  index.js  package.json
consumers/llama-orch-utils-napi/: .gitignore  Cargo.toml  README.md  package.json
consumers/rbee-sdk/: .gitignore  Cargo.toml  NEXTJS_INTEGRATION_GUIDE.md  OPERATIONS_CHECKLIST.md  README.md  TEAM_285_HANDOFF.md  TEAM_286_IMPLEMENTATION_SUMMARY.md  TEAM_286_MISSION.md  TEAM_286_PHASE_1_COMPLETE.md  TEAM_286_PHASE_3_ALL_OPERATIONS.md  TEAM_286_PLAN_OVERVIEW.md  TEAM_286_SUBMIT_AND_STREAM_COMPLETE.md  WEB_UI_INTEGRATION_COMPLETE.md  test.html
consumers/rbee-utils/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  index.ts  package.json  tsconfig.json
contracts/config-schema/: Cargo.toml  README.md
frontend/.dx-tool/: .gitignore  00_MASTER_PLAN.md  01_CLI_DESIGN.md  02_CSS_VERIFICATION.md  03_HTML_QUERIES.md  04_VISUAL_REGRESSION.md  05_INTEGRATION.md  06_IMPLEMENTATION_ROADMAP.md  07_DEV_SERVER_LIFECYCLE.md  Cargo.toml  DX_ENGINEERING_RULES.md  FEATURE_REQUESTS.md  HEADLESS_BROWSER_COMPLETE.md  INSPECT_COMMAND_DEMO.md  PERFORMANCE_SPECS.md  README.md  README_USAGE.md  TEAM_DX_001_HANDOFF.md  TEAM_DX_001_KICKOFF.md  TEAM_DX_002_HANDOFF.md  TEAM_DX_002_UNIT_TESTS_SUMMARY.md  TEAM_DX_003_COMPLETE.md  TEAM_DX_003_HANDOFF.md  TEAM_DX_004_COMPLETE.md  TEAM_DX_004_HANDOFF.md  WORKSPACE_INTEGRATION.md
libs/adapter-host/: Cargo.toml  README.md
libs/proof-bundle/: CHECKLIST_PRODUCTION.md  Cargo.toml  README.md
orchestrator-core/: Cargo.toml  README.md
orchestrator-core/.specs/: 00_orchestrator_core.md  10_contracts.md  12_catalog_core.md  13_engine_provisioner.md  14_model_provisioner.md  30_TESTING.md  31_UNIT.md  32_PROPERTY.md  33_INTEGRATION.md  36_DETERMINISM.md  40_ERROR_MESSAGING.md
orchestrator-core/benches/: queue_bench.rs
orchestrator-core/src/: lib.rs  queue.rs
orchestrator-core/tests/: props_queue.rs
orchestratord/: APOLOGY.md  Cargo.toml  GLOBAL_TODO.md  README.md  TESTING_CHECKLIST.md  TODO.md  TODO_2.md  TODO_PER_FILE.md
orchestratord/.specs/: 00_orchestratord.md  10_orchestratord_v2_architecture.md  20_contracts.md  21_orchestrator_core.md  22_worker_adapters.md  40_TESTING.md  41_UNIT.md  43_INTEGRATION.md  44_CONTRACT.md  45_BDD.md  47_METRICS.md
orchestratord/bdd/: Cargo.toml
orchestratord/src/: admission.rs  backpressure.rs  errors.rs  lib.rs  main.rs  metrics.rs  placement.rs  session.rs  sse.rs  state.rs
orchestratord/src-old/: admission.rs  domain.rs  lib.rs  metrics.rs  services.rs  state.rs
orchestratord/tests/: admission_metrics.rs  api_types.rs  domain_error_mapping.rs  middleware.rs  provider_verify.rs  session_service.rs  storage.rs
provisioners/engine-provisioner/: Cargo.toml  TODO.md
provisioners/model-provisioner/: Cargo.toml  TODO.md
test-harness/bdd/: ARCHITECTURE_REVIEW.md  BDD_ALIGNMENT_CHECK.md  BDD_LIFECYCLE_MANAGEMENT.md  BDD_TESTING_GAPS_CONSOLIDATED.md  CHECKLIST.md  CHECKLIST_INTEGRITY_RULES.md  CONTRADICTIONS_FOUND.md  CRITICAL_ISSUES_SUMMARY.md  Cargo.toml  Dockerfile.mock-worker  Dockerfile.queen-rbee  Dockerfile.rbee-hive  ERROR_PATTERNS.md  EXTENDED_BDD_RESEARCH.md  FEATURE_MIGRATION_TRACKING.md  FINAL_M1_STRUCTURE.md  GUARDRAILS_SUMMARY.md  HANDOFF_TO_TEAM_043_COMPLETE.md  HANDOFF_TO_TEAM_043_FINAL.md  HANDOFF_TO_TEAM_045.md  HANDOFF_TO_TEAM_046.md  HANDOFF_TO_TEAM_047.md  HANDOFF_TO_TEAM_048.md  HANDOFF_TO_TEAM_052.md  HANDOFF_TO_TEAM_053.md  HANDOFF_TO_TEAM_054.md  HANDOFF_TO_TEAM_057_THINKING_TEAM.md  LOGGING_ONLY_FUNCTIONS_ANALYSIS.md  M0_M1_COMPONENTS_ONLY.md  MISTAKES_AND_CORRECTIONS.md  MOCKS_TO_REPLACE.md  PORT_ALLOCATION.md  PRODUCT_CODE_REALITY_CHECK.md  QUICK_START.md  README.md  README_BDD_TESTS.md  START_HERE_TEAM_112.md  STUB_ANALYSIS.md  TEAM_043_IMPLEMENTATION_SUMMARY.md  TEAM_044_SUMMARY.md  (+73 more)
test-harness/determinism-suite/: CHECKLIST.md  Cargo.toml  README.md  TODO.md  seeds.txt
test-harness/e2e-haiku/: CHECKLIST.md  Cargo.toml  README.md  TODO.md
test-harness/metrics-contract/: CHECKLIST.md  Cargo.toml  README.md  TODO.md
test-harness/proof-bundle/: ARCHITECTURE_V3_PROPOSAL.md  BUG_REPORT_ZERO_TESTS.md  CHANGELOG.md  Cargo.toml  DOGFOODING.md  DOGFOOD_EXAMPLE.md  FEATURES_V3.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_V2_TRACKER.md  MANAGEMENT_REQUIREMENTS_ADDRESSED.md  MIGRATION.md  NEXT_STEPS.md  README.md  REDESIGN_V2.md  SRC2_STATUS.md  TEAM_RESPONSIBILITIES.md  TEST_SUMMARY.md  V3_ARCHITECTURE_AUDIT.md  V3_COMPLETE.md  V3_FINAL_PLAN.md  V3_REPLACEMENT_COMPLETE.md
tools/openapi-client/: Cargo.toml  README.md
tools/readme-index/: Cargo.toml  README.md  readme_index.json
tools/spec-extract/: Cargo.toml  README.md
worker-adapters/adapter-api/: Cargo.toml
worker-adapters/llamacpp-http/: Cargo.toml  README.md  implementation-hints-llamacpp.md
xtask/: BUG_HUNT_ANALYSIS.md  CLEANUP_SUMMARY.md  Cargo.toml  RBEE_WRAPPER.md  README.md  SMART_DEFAULT_BEHAVIOR.md  TEAM-252-HANG-FIX.md  WORKER_TEST_SUMMARY.md  WORKER_TEST_XTASK.md
(+3706 files in other folders)
