# llama-orch Workspace
#
# This workspace contains all crates that make up the llama-orch distributed inference system.

[workspace]
members = [
    # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    # MAIN SERVICES — Core Binaries
    # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    
    "bin/rbees-workerd",          # Worker daemon (inference execution)
    "bin/rbees-ctl",              # Orchestrator CLI (remote control)
    "bin/rbees-pool",             # Pool CLI (local pool management)
    "bin/rbees-orcd",             # Orchestrator daemon (M1+)

    # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    # SHARED CRATES — Cross-Service Utilities
    # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    
    "bin/shared-crates/audit-logging",
    "bin/shared-crates/audit-logging/bdd",
    "bin/shared-crates/auth-min",
    "bin/shared-crates/deadline-propagation",
    "bin/shared-crates/gpu-info",
    "bin/shared-crates/input-validation",
    "bin/shared-crates/input-validation/bdd",
    "bin/shared-crates/narration-core",
    "bin/shared-crates/narration-core/bdd",
    "bin/shared-crates/narration-macros",
    "bin/shared-crates/pool-core",         # TEAM-022: Pool management shared types
    "bin/shared-crates/pool-registry-types",
    "bin/shared-crates/secrets-management",
    "bin/shared-crates/secrets-management/bdd",

    # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    # CONSUMER LIBRARIES — External SDKs
    # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    # Client libraries and utilities for external developers.
    
    "consumers/llama-orch-sdk",    # Rust SDK for llama-orch
    "consumers/llama-orch-utils",  # CLI utilities & helpers

    # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    # DEVELOPER TOOLS — Build & Maintenance
    # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    # Tools for working with the monorepo.
    
    "tools/openapi-client",  # OpenAPI client generator
    "tools/readme-index",    # README index generator
    "tools/spec-extract",    # Spec extraction & validation
    "xtask",                 # Workspace automation (cargo xtask)
    
]

resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["llama-orch contributors"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1.0", features = ["either1"] }
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
http = "1"
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
bytes = "1"
uuid = { version = "1", features = ["serde", "v4"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
hkdf = "0.12"
walkdir = "2"
regex = "1"
insta = { version = "1", features = ["yaml"] }
proptest = "1"
wiremock = "0.6"
openapiv3 = "2"
jsonschema = "0.33"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
ssh2 = "0.9"
daemonize = "0.5"
indicatif = "0.17"
sysinfo = "0.30"
