[package]
name = "orchestrator-core"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "orchestrator_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
contracts-api-types = { path = "../contracts/api-types" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = "0.5"

[[bench]]
name = "queue_bench"
harness = false
