[package]
name = "orchestratord"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "orchestratord"
path = "src/lib.rs"

[[bin]]
name = "orchestratord"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
http = { workspace = true }
contracts-api-types = { path = "../contracts/api-types" }
orchestrator-core = { path = "../orchestrator-core" }
regex = { workspace = true }
serde_json = { workspace = true }
prometheus = "0.13"
once_cell = "1"
worker-adapters-adapter-api = { path = "../worker-adapters/adapter-api" }
worker-adapters-mock = { path = "../worker-adapters/mock" }
futures = { workspace = true }
pool-managerd = { path = "../pool-managerd" }

[dev-dependencies]
openapiv3 = { workspace = true }
serde_yaml = { workspace = true }
