[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"
autobenches = false
autotests = false
autodocs = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
openapiv3 = { workspace = true }
contracts-config-schema = { path = "../contracts/config-schema" }
auth-min = { path = "../bin/shared-crates/auth-min" }
# TEAM-111: Added for BDD test runner
regex = "1.10"
chrono = "0.4"
colored = "2.1"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.8"
