[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"
autobenches = false
autotests = true
autodocs = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[lib]
name = "xtask"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
openapiv3 = { workspace = true }
contracts-config-schema = { path = "../contracts/config-schema" }
auth-min = { path = "../bin/98_security_crates/auth-min" }  # TEAM-270: Moved to security crates
# TEAM-111: Added for BDD test runner
regex = "1.10"
chrono = "0.4"
colored = "2.1"
indicatif = "0.17"
# Worker isolation testing
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2.9", features = ["json"] }
# TEAM-160: E2E integration testing
tokio = { workspace = true, features = ["full"] }
# TEAM-162: Removed reqwest - tests rely only on CLI stdout, not HTTP calls
# TEAM-193: Auto-update for dependency-aware rebuilds
auto-update = { path = "../bin/99_shared_crates/auto-update" }
# TEAM-252: Integration testing dependencies
tempfile = "3.8"
futures = "0.3"
