[package]
name = "cli-consumer-tests"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cli-consumer-tests"
path = "src/main.rs"

autobenches = false

autotests = true

autodocs = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
insta = { workspace = true }
wiremock = { workspace = true }
reqwest = { workspace = true }
pact_consumer = "1"
pact_models = "1"
