[package]
name = "cli-consumer-tests"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "cli-consumer-tests"
path = "src/main.rs"

autobenches = false

autotests = true

autodocs = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
insta = { workspace = true }
wiremock = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
