[package]
name = "llama-orch-sdk"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://example.com/llama-orch"
description = "Single-source SDK for llama-orch (Rust core, optional WASM for npm)"

[features]
default = ["native"]
# Native build: HTTP client via reqwest + tokio (to be implemented later)
native = []
# WASM build: enable tsify + wasm-bindgen
wasm = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
serde = { version = "1", features = ["derive"] }
futures-core = "0.3"
# Optional dependencies for WASM/TS bindings
wasm-bindgen = { version = "0.2", optional = true }
tsify = { version = "0.4", optional = true }

[lib]
name = "llama_orch_sdk"
path = "src/lib.rs"
# Provide both rlib and cdylib to support wasm-pack output
crate-type = ["rlib", "cdylib"]
