# rbee-sdk
#
# TEAM-286: TypeScript/JavaScript SDK for rbee
#
# NOTE: This Cargo.toml is kept for workspace compatibility but is not actively used.
# The SDK is now pure TypeScript (no Rust/WASM).
# See TEAM_286_MISSION.md for details.

[package]
name = "rbee-sdk"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/veighnsche/rbee"
description = "TypeScript/JavaScript SDK for rbee (pure TS, no WASM)"
publish = false

# No dependencies - pure TypeScript SDK
[dependencies]

# Placeholder lib to satisfy cargo workspace
[lib]
name = "rbee_sdk"
path = "src/lib.rs"
crate-type = ["rlib"]
