[package]
name = "contracts-config-schema"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "contracts_config_schema"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
jsonschema = { workspace = true }
