# Created by: TEAM-DX-001
# Frontend DX CLI Tool
# TEAM-DX-003: Added BDD subcrate

[workspace]
members = ["bdd"]

[package]
name = "dx"
version = "0.1.0"
edition = "2021"
authors = ["TEAM-DX-001"]
description = "Frontend DX CLI tool for CSS/HTML verification without browser access"
license = "GPL-3.0-or-later"

[[bin]]
name = "dx"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

# HTML/CSS parsing
scraper = "0.18"
lightningcss = { version = "1.0.0-alpha.57" }

# Headless browser for SPA support
headless_chrome = "1.0"

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal output
colored = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# URL parsing
url = "2.5"

[dev-dependencies]
# Testing
insta = "1.34"
mockito = "1.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
