[package]
name = "adapter-host"
version = "0.0.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"
authors = ["llama-orch contributors"]

[lib]
name = "adapter_host"
path = "src/lib.rs"

autobenches = false
autotests = false
autodocs = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
worker-adapters-adapter-api = { path = "../worker-adapters/adapter-api" }
contracts-api-types = { path = "../../contracts/api-types" }
