[package]
name = "proof-bundle"
version = "0.1.0"
edition = "2021"
authors = ["llama-orch contributors"]
license = "GPL-3.0-or-later"
description = "Utilities to emit crate-local proof bundles for tests (NDJSON/JSON/Markdown), with run_id and path conventions."

[lib]
name = "proof_bundle"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
